# tokencost

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  publish.yml
docs/: index.html
docs/plans/: 2026-02-22-llm-cost-tracker-design.md
src/llm_cost/: __init__.py  tracker.py
src/tokencost/: __init__.py  anthropic_wrapper.py  exceptions.py  gemini_wrapper.py  openai_wrapper.py  pricing.py  tracker.py
test_cost_tracker/: main.py  test_new_features.py
tests/: test_anthropic_wrapper.py  test_gemini_wrapper.py  test_openai_wrapper.py  test_pricing.py  test_tracker.py
