[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-cost-tracker"
version = "0.1.0"
description = "A lightweight Python library for tracking LLM API costs via litellm's callback system"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Paawan Purdhani", email = "paawanpurdhani@gmail.com"},
]
keywords = ["llm", "cost", "tracking", "litellm", "budget", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Paawan13/litellm-cost-tracker"
Repository = "https://github.com/Paawan13/litellm-cost-tracker"
"Bug Tracker" = "https://github.com/Paawan13/litellm-cost-tracker/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_cost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
