[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tokencost"
version = "0.6.0"
description = "A lightweight Python library for tracking OpenAI and Anthropic SDK costs with budget alerts"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Paawan Purdhani", email = "paawanpurdhani@gmail.com"},
]
keywords = ["llm", "cost", "tracking", "token", "budget", "openai", "anthropic", "litellm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "litellm>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.26.0"]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-genai>=1.0.0"]
all = [
    "openai>=1.26.0",
    "anthropic>=0.18.0",
    "google-genai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "openai>=1.26.0",
    "anthropic>=0.18.0",
    "google-genai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Paawan13/llm-tokencost"
Repository = "https://github.com/Paawan13/llm-tokencost"
"Bug Tracker" = "https://github.com/Paawan13/llm-tokencost/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tokencost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
